update : add hot reload in blockchain update : dev-docker-compose.yml

--- a/srcs/blockchain/src/views/index.ejs
+++ b/srcs/blockchain/src/views/index.ejs
@@ -190,7 +190,7 @@
                             const li = document.createElement("li");
                             li.className = "list-group-item d-flex justify-content-between align-items-center";
                             li.innerHTML = `
-							<span><strong>ID:</strong> ${item.tx_id} winner is => ${item.winner_id}</span>
+							<span><strong>Tour ID:</strong> ${item.tour_id} winner is => ${item.player1_id}</span>
 						`;
                             ul.appendChild(li);
                         });
