update: add blockchain route to have a blockchain views fix: solve routing problem of the gateway which not allowed html headers proxyBlockRequest update: ejs files for asset like css

--- a/srcs/blockchain/src/views/header.ejs
+++ b/srcs/blockchain/src/views/header.ejs
@@ -20,6 +20,6 @@
 		.small{font-size:12px;color:#666;margin-top:8px}
 		@media (max-width:720px){.container{grid-template-columns:1fr;}}
 	</style>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="http://localhost:3005/style.css">
   </head>
   <body>
