--- a/srcs/blockchain/src/views/index.ejs
+++ b/srcs/blockchain/src/views/index.ejs
@@ -167,7 +167,7 @@
             meBtn.disabled = true;
 
             try {
-                const res = await fetch("/list", {
+                const res = await fetch("/api/block", {
                     method: "GET",
                     credentials: "include"
                 });
