feat(block): config deploy on Fuji tesnet
fix(block): ubpdate some static file lonks
feat(block): add background of front in Dapp

srcs/.env.blockchain.example
srcs/blockchain/.env.test.blockchain
srcs/blockchain/src/SmartContract/hardhat.config.ts
srcs/blockchain/src/config/env.ts
srcs/blockchain/src/core/error.ts
srcs/blockchain/src/module/block.consumers.ts
srcs/blockchain/src/public/bg.svg
srcs/blockchain/src/public/output.css
srcs/blockchain/src/public/style-block.css
srcs/blockchain/src/views/header.ejs
srcs/blockchain/src/views/index.ejs
srcs/blockchain/src/views/snapshot-details.ejs
srcs/blockchain/src/views/snapshots.ejs

--- a/srcs/blockchain/src/views/header.ejs
+++ b/srcs/blockchain/src/views/header.ejs
@@ -6,7 +6,10 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/blockchain/output.css">
   </head>
-  <body class="bg-slate-100 text-slate-900">
+  <body 
+    class="min-h-screen bg-no-repeat bg-cover bg-center text-slate-900"
+    style="background-image: url('/blockchain/bg.svg');"
+  >
     <div class="text-center my-4">
     <h1
       class="scramble"
