--- a/srcs/blockchain/src/public/style-block.css
+++ b/srcs/blockchain/src/public/style-block.css
@@ -4,7 +4,7 @@
   font-weight: 600;
   cursor: pointer;
   user-select: none;
-  mix-blend-mode: difference;
+  mix-blend-mode: multiply;
 }
 
 .success {
