--- a/srcs/blockchain/src/views/snapshot-details.ejs
+++ b/srcs/blockchain/src/views/snapshot-details.ejs
@@ -68,7 +68,7 @@
 
     <section>
       <a
-        href="/"
+        href="/blockchain"
         class="inline-block px-4 py-2 bg-blue-600 text-white rounded"
       >
         Go back
